--- a/LogIn.css
+++ b/LogIn.css
@@ -143,6 +143,7 @@ body {
     background: #f6f6f6;
     box-shadow: inset 0px 20px 20px #ffffff;
     text-align: center;
+    color: lightgray;
 }
 
 box2 {
